Fix randomizing samples and illusions in Study 2

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Aa]ssets/Free/
 /[Aa]ssets/RealisticShoePack/
 /[Aa]ssets/SteamVR_Input/
 /[Aa]ssets/StreamingAssets/
